samples/_failures_safe/1761088474_d8ff2e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a326402a.c: In function ‘main’:
./samples/SAFE/__tmp_a326402a.c:139:21: error: expected declaration or statement at end of input
  139 |                     break;
      |                     ^~~~~
./samples/SAFE/__tmp_a326402a.c:139:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a326402a.c:139:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a326402a.c:139:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a326402a.c:139:21: error: expected declaration or statement at end of input
